# AutoMergeEnv

./: .cursorrules  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  server.py  setup_tasks.sh  tasks.json
.agent/: ARCHITECTURE.md  EXECUTION.md
environment/: env.py  file_utils.py  git_utils.py  graders.py  models.py
server/: app.py
